# binary_serialization

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/include/: aggregate_traits.hpp  binary_stream.hpp  container_traits.hpp  serialization.hpp  span.hpp  utility.hpp
tests/: CMakeLists.txt  main.cpp
